More comment spacing, icon fixes and remove deprecation errors.

--- a/app/assets/stylesheets/sits.css.scss
+++ b/app/assets/stylesheets/sits.css.scss
@@ -98,6 +98,7 @@ article.sit-teaser {
         float: right;
         font-size: 0.85em;
         opacity: 0.7;
+        margin: 10px 0 5px;
       }
     }
     .new_comment {
